# palugada-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.claude/skills/palugada-bugfix/: SKILL.md
.claude/skills/palugada-docs/: SKILL.md
.claude/skills/palugada-feature/: SKILL.md
.claude/skills/palugada-git/: SKILL.md
.claude/skills/palugada-refactor/: SKILL.md
.claude/skills/palugada-review/: SKILL.md
.claude/skills/palugada-search/: SKILL.md
.github/workflows/: ci.yml  release.yml
.palugada/: config.yaml
docs/: PRD-onboarding-connectors.md  PUBLISHING.md
docs/superpowers/plans/: 2026-06-10-exec-layer-multi-cli.md  2026-06-13-complete-brief-flows-and-fact-lookup.md  2026-06-13-tree-sitter-extraction.md  2026-06-14-android-mvvm-knowledge-content.md  2026-06-14-generic-symbol-index.md  2026-06-14-github-issues-tracker.md  2026-06-14-profile-custom-skills.md  2026-06-14-profile-use.md  2026-06-14-rich-skills.md  2026-06-14-web-console.md  2026-06-16-codex-agents-skills.md  2026-06-16-init-merge-agent-files.md  (+17 more)
examples/: project.config.example.yaml
npm/: build-npm.mjs  gen-checksums.mjs
npm/palugada-cli/: .gitignore  README.md  install.js  package.json
packaging/homebrew/: palugada.rb
packaging/scoop/: palugada.json
src/: brief.rs  config.rs  credentials.rs  effective.rs  exec.rs  http.rs  indexer.rs  inherit.rs  knowledge.rs  main.rs  manifest.rs  palette.rs  personal.rs  profile.rs  scaffold.rs  skillmap.rs  trust.rs  web.rs
src/clients/: confluence.rs  figma.rs  github.rs  github_actions.rs  github_issues.rs  gitlab.rs  gitlab_ci.rs  jenkins.rs  jira.rs  mod.rs  notion.rs  slack.rs
src/tags/: dart.scm  kotlin.scm  rust.scm
src/web/: app.js  index.html  style.css
tests/: cli.rs
(+77 files in other folders)
