# palugada — project-agnostic dev knowledge & connector CLI.
# Standalone Cargo workspace.
[workspace]

[package]
name = "palugada"
version = "0.1.2"
edition = "2021"
description = "Project-agnostic dev knowledge & connector CLI"
license = "MIT"
repository = "https://github.com/yudistirosaputro/palugada-cli"

[[bin]]
name = "palugada"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json", "tls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"
regex = "1"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tree-sitter = "0.25"
tree-sitter-kotlin-ng = "1.1"
tiny_http = "0.12"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
